docs and mock
make new openapi 3.0 docs and handler&logger mock
